deployment/kustomization/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: horus
  name: horus
  namespace: websites
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: horus
