deployment/kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horus
  namespace: websites
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - horus.example.com
      secretName: horus-tls
  rules:
    - host: horus.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: horus
                port:
                  number: 8080
